# FfmpegTool

./: .clang-format  CMakeLists.txt  README.md  build.sh
src/: FfmpegTool.cpp  FfmpegTool.hpp
test/: build.sh  main.cpp
